// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate the app script for a dynamic page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/posts/:slug",
    "path": "/posts/my-first-post"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "blog": {
    "type": "blog",
    "name": "Matteo Antony",
    "posts": [],
    "id": "blog"
  },
  "post": {
    "type": "post",
    "post": null,
    "id": "post"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/posts/:slug": () => import("@/pages/post.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;

exports[`should generate the app script for a page that has metadata 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/blog",
    "path": "/blog"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "blog": {
    "type": "blog",
    "name": "Matteo Antony",
    "posts": [],
    "id": "blog"
  },
  "post": {
    "type": "post",
    "post": null,
    "id": "post"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/blog": () => import("@/pages/blog.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;

exports[`should generate the app script for a page with an entity 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/about",
    "path": "/about"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "blog": {
    "type": "blog",
    "name": "Matteo Antony",
    "posts": [],
    "id": "blog"
  },
  "post": {
    "type": "post",
    "post": null,
    "id": "post"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/about": () => import("@/pages/about.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;

exports[`should generate the app script for a static page 1`] = `
"import { createDevtools, createStore, mount } from "@inglorious/web"
import { getRoute, router, setRoutes } from "@inglorious/web/router"

const pages = [
  {
    "pattern": "/",
    "path": "/"
  }
]
const path = window.location.pathname + window.location.search + window.location.hash
const page = pages.find((page) => page.path === path)

const types = { router }

const entities = {
  router: {
    type: "router",
    path: page.path,
    route: page.moduleName,
  },

  "about": {
    "type": "about",
    "name": "Us",
    "id": "about"
  },
  "blog": {
    "type": "blog",
    "name": "Matteo Antony",
    "posts": [],
    "id": "blog"
  },
  "post": {
    "type": "post",
    "post": null,
    "id": "post"
  }

}

const middlewares = []
if (import.meta.env.DEV) {
  middlewares.push(createDevtools().middleware)
}

setRoutes({
  "/": () => import("@/pages/index.js")
})

const module = await getRoute(page.pattern)()
const type = module[page.moduleName]
types[page.moduleName] = type

const store = createStore({ types, entities, middlewares })

const root = document.getElementById("root")

mount(store, (api) => {
  const { route } = api.getEntity("router")
  return api.render(route, { allowType: true })
}, root)
"
`;
